increase supervisor column-gap and fix #3

--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -13,7 +13,8 @@
 .team{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 1rem;
+    row-gap: 1rem;
+    column-gap: 2rem;
     img {
       max-width: 100%;
       max-height: 100%;
